tests/typing/fail/pre-04.stderr
error: this expression will cause an access to an undefined value
 --> tests/typing/fail/pre-04.rs:9:20
  |
9 |         y : bool = pre (!x);
  |                    ^^^^^^^^
